--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@headlessui/react": "^1.7.10",
     "@heroicons/react": "^2.0.15",
     "@testing-library/jest-dom": "^5.16.5",
@@ -12,6 +13,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.27",
+    "@types/react-collapse": "^5.0.4",
     "@types/react-dom": "^18.0.10",
     "antd": "^5.2.0",
     "axios": "^1.3.2",
@@ -25,11 +27,14 @@
     "query-string": "^8.1.0",
     "rc-menu": "^9.8.2",
     "react": "^18.2.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.5",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "sass": "^1.58.0",
+    "swiper": "^11.0.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
