--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-share": "^5.0.3",
     "sass": "^1.58.0",
     "swiper": "^11.0.5",
     "typescript": "^4.9.5",
