--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.5",
+    "react-promise-tracker": "^2.1.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
